--- a/src/visitor/components/visitor-currated-products/visitor-currated-products.component.html
+++ b/src/visitor/components/visitor-currated-products/visitor-currated-products.component.html
@@ -1,24 +1,32 @@
-<section>
+<section class="currated-products">
     <h2>Currated picks</h2>
-    <div>
-        <div>
-            <img src="../../../assets/visitor/curratedPicks/bestSeller.png" alt="">
-            <button>Best Seller</button>
+    <div class="card">
+        <div class="pick">
+            <div class="content">
+                <button type="button">Best Seller</button>
+            </div>
+            
         </div>
 
-        <div>
-            <img src="../../../assets/visitor/curratedPicks/men.jfif" alt="">
-            <button>Shop Men</button>
+        <div class="pick">
+            <div class="content">
+                <button>Shop Men</button>
+            </div>
+            
         </div>
 
-        <div>
-            <img src="../../../assets/visitor/curratedPicks/women.jfif" alt="">
-            <button>Shop Women</button>
+        <div class="pick">
+            <div class="content">
+                <button>Shop Women</button>
+            </div>
+            
         </div>
 
-        <div>
-            <img src="../../../assets/visitor/curratedPicks/casual.jpg" alt="">
-            <button>Shop Casual</button>
+        <div class="pick">
+            <div class="content">
+                <button>Shop Casual</button>
+            </div>
+            
         </div>
     </div>
 </section>
