--- a/src/visitor/components/visitor-featured-products/visitor-featured-products.component.html
+++ b/src/visitor/components/visitor-featured-products/visitor-featured-products.component.html
@@ -1,24 +1,46 @@
-<section>
+<section class="featured-products">
     <h2>Featured products</h2>
-    <div>
-        <article style="border: 1px solid black;">
-            <img src="../../../assets/visitor/featuredProducts/camisa.jfif" alt="">
-            <h4>Autumn Dress</h4>
-            <span>$58</span>
-            <span>$65</span>
+    <div class="products">
+        <article>
+            <img src="../../../assets/visitor/featuredProducts/camisa.jpg" alt="">
+            <div class="description">
+                <div class="information">
+                    <h4>Autumn Dress</h4>
+                    <span class="price">$58</span>
+                    <span class="discount">$65</span>
+                </div>
+                <div class="add">
+                    <mat-icon>add_shopping_cart</mat-icon>
+                </div>
+            </div>
         </article>
 
-        <article style="border: 1px solid black;">
-            <img src="../../../assets/visitor/featuredProducts/chaleco.jfif" alt="">
-            <h4>Gray Shirt</h4>
-            <span>$87</span>
+        <article>
+            <img src="../../../assets/visitor/featuredProducts/camisa.jpg" alt="">
+            <div class="description">
+                <div class="information">
+                    <h4>Autumn Dress</h4>
+                    <span class="price">$58</span>
+                    <span class="discount"></span>
+                </div>
+                <div class="add">
+                    <mat-icon>add_shopping_cart</mat-icon>
+                </div>
+            </div>
         </article>
 
-        <article style="border: 1px solid black;">
-            <img src="../../../assets/visitor/featuredProducts/vestido.jfif" alt="">
-            <h4>Leather Coat</h4>
-            <span>$32</span>
-            <span>$40</span>
+        <article>
+            <img src="../../../assets/visitor/featuredProducts/camisa.jpg" alt="">
+            <div class="description">
+                <div class="information">
+                    <h4>Autumn Dress</h4>
+                    <span class="price">$58</span>
+                    <span class="discount">$65</span>
+                </div>
+                <div class="add">
+                    <mat-icon>add_shopping_cart</mat-icon>
+                </div>
+            </div>
         </article>
     </div>
 </section>
