--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-<app-shared-navbar></app-shared-navbar>
-<router-outlet></router-outlet>
-<app-shared-footer></app-shared-footer>
+<div class="all">
+    <app-shared-navbar></app-shared-navbar>
+    <router-outlet></router-outlet>
+    <app-shared-footer></app-shared-footer>
+</div>
