--- a/src/shared/components/navbar/navbar.component.css
+++ b/src/shared/components/navbar/navbar.component.css
@@ -1,31 +1,55 @@
 .header {
-    display: flex;
-    /* central verticalmente los elementos dentro del header */
-    align-items: center; 
-    justify-content: space-between;
-    padding: 1.25rem;
+  display: flex;
+  /* central verticalmente los elementos dentro del header */
+  align-items: center;
+  justify-content: space-between;
+  padding: 1.25rem;
 }
 
 .header nav ul {
-    display: flex;
+  display: flex;
 }
 .header nav ul li {
-    padding-left: 1rem;
-    padding-right: 1rem;;
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 .logo img {
-    width: 3rem;
-    height: 3rem;
+  width: 3rem;
+  height: 3rem;
+}
+.search {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
 }
 
-    
+.search--input {
+  display: flex;
+  align-items: center;
+  background-color: #f2f4f7;
+  border-radius: 10px;
+  padding: 0.5rem;
+}
+
+.search--input input {
+  border: 0;
+  background-color: #f2f4f7;
+  padding-left: 0.5rem;
+}
+.search--input ::placeholder {
+  color: grey;
+}
+.search--input mat-icon {
+  color: grey;
+}
+
 /* Cuando la pantalla es menor a 900px  (tablets y teléfonos inteligentes)*/
-@media only screen and (max-width : 900px) {
-    .header nav {
-        display: none;
-    }
-    .search {
-        display: none;
-    }
+@media only screen and (max-width: 900px) {
+  .header nav {
+    display: none;
+  }
+  .search {
+    display: none;
+  }
 }
