--- a/src/shared/components/navbar/navbar.component.html
+++ b/src/shared/components/navbar/navbar.component.html
@@ -1,21 +1,23 @@
-
 <header class="header">
-    <div class="logo">
-        <img src="../../../assets/visitor/logo.png" alt="">
+  <div class="logo">
+    <img src="../../../assets/visitor/logo.png" alt="" />
+  </div>
+
+  <nav>
+    <ul>
+      <li><b>Shop</b></li>
+      <li><b>Most wanted</b></li>
+      <li><b>New Arrival</b></li>
+    </ul>
+  </nav>
+
+  <div class="search">
+    <div class="search--input">
+      <mat-icon>loupe</mat-icon>
+      <input type="search" name="search" id="search" placeholder="Search" />
     </div>
 
-    <nav>
-        <ul>
-            <li><b>Shop</b></li>
-            <li><b>Most wanted</b></li>
-            <li><b>New Arrival</b></li>
-        </ul>
-    </nav>
-
-    <div class="search">
-        <input type="search" name="search" id="search" placeholder="Search">
-    </div>
-
+    <mat-icon>shopping_cart</mat-icon>
+    <mat-icon> person_pin</mat-icon>
+  </div>
 </header>
-
-
