--- a/src/visitor/components/visitor-about-us/visitor-about-us.component.html
+++ b/src/visitor/components/visitor-about-us/visitor-about-us.component.html
@@ -1,31 +1,31 @@
 <section class="about-us">
-    <div>
+    <div class="message">
         <h2>We provide best customer experiences</h2>
         <p>We ensure our customers have the best shopping experience</p>
     </div>
 
     <div class="card">
-        <article style="border: 1px solid black;">
-            <p>icon</p>
-            <p>Original Products</p>
+        <article>
+            <mat-icon>add_shopping_cart</mat-icon>
+            <h5>Original Products</h5>
             <p>We provide money back guarantee if the product are not original</p>
         </article>
 
-        <article style="border: 1px solid black;">
-            <p>icon</p>
-            <p>Satisfaction Guarantee</p>
+        <article>
+            <mat-icon>face</mat-icon>
+            <h5>Satisfaction Guarantee</h5>
             <p>Exchange the product you have purchase if it does not fit on you</p>
         </article>
 
-        <article style="border: 1px solid black;">
-            <p>icon</p>
-            <p>New Arrival EveryDay</p>
+        <article>
+            <mat-icon>watch_later</mat-icon>
+            <h5>New Arrival EveryDay</h5>
             <p>We updates our collections almost everyday</p>
         </article>
 
-        <article style="border: 1px solid black;">
-            <p>icon</p>
-            <p>Fast & Free Shipping</p>
+        <article>
+            <mat-icon> directions_car</mat-icon>
+            <h5>Fast & Free Shipping</h5>
             <p>We offer fast and free shipping for our loyal customers</p>
         </article>
     </div>
