--- a/src/visitor/components/visitor-banner/visitor-banner.component.html
+++ b/src/visitor/components/visitor-banner/visitor-banner.component.html
@@ -1,3 +1,3 @@
 <section class="banner">
-    <img src="../../../assets/visitor/banners/fashionBanner.png" alt="">
+    <img src="../../../assets/visitor/banners/fashionBanner.jpg" alt="">
 </section>
