--- a/src/visitor/components/visitor-brands/visitor-brands.component.css
+++ b/src/visitor/components/visitor-brands/visitor-brands.component.css
@@ -3,9 +3,8 @@
 }
 .brand div {
     display: grid;
-    /* centrar horizontalmente los elementos con grid */
-    place-items: center;
-    align-items: center;
+    place-items: center; /* centrar horizontalmente los elementos con grid */
+    align-items: center; /* centrar verticalmente los elementos con grid */
     row-gap: 1.25rem;
 }
 
@@ -24,6 +23,6 @@
 /* Cuando la pantalla es menor a 900px  (tablets y teléfonos inteligentes)*/
 @media only screen and (max-width : 900px) {
     .brand div {
-        grid-template-columns: repeat(3, 1fr);
+        grid-template-columns: repeat(4, 1fr);
     }
 }
